include/altdss/capi/dss.h

    ALTDSS_CAPI_DLL int32_t WireData_Get_idx(void);
    ALTDSS_CAPI_DLL void WireData_Set_idx(int32_t Value);
    ALTDSS_CAPI_DLL void* WireData_Get_Pointer(void);